Bug 529846 check-3d-raytrace.js failed on Solaris x86 r=jimb